--- a/about.html
+++ b/about.html
@@ -132,42 +132,42 @@
 					<div class="text">We work with some really amazing businesses and organisations. Here are</div>
 				</div>
 				<div class="sponsors-outer">
-					<ul class="sponsors-carousel-two owl-carousel owl-theme">
+					<ul class="sponsors-carousel-two owl-carousel owl-theme" style="cursor: -webkit-grab;cursor: grab;">
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/reon1.png"
-										alt=""></a>
+							<figure class="image-box"><img src="images/clients/reon1.png" alt="">
 							</figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img
-										src="images/clients/swasarjan.jpeg" alt="" style="    padding: 50px;
-					                             margin-top: -60px;"></a></figure>
-						</li>
-						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img
-										src="images/clients/gift time.png" alt="" style="margin-top: -10px;"></a>
+							<figure class="image-box"><img src="images/clients/Qualtiy.png" alt="">
 							</figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/h.png"
-										style="padding: 25px;margin-top: q0px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/swasarjan.jpeg" alt="" style="    padding: 50px;
+		                             margin-top: -60px;"></figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/sahara.png"
-										style="margin-top: 20px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/gift time.png" alt="" style="margin-top: -10px;">
+							</figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/mehul1.png"
-										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/h.png" style="padding: 25px;margin-top: q0px;"
+									alt=""></figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img
-										src="images/clients/sukhsangam.png" style="padding:50px;margin-top: -50px;"
-										alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/sahara.png" style="margin-top: 20px;" alt="">
+							</figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/ganga_bg.png"
-										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/mehul1.png"
+									style="padding:50px;margin-top: -50px;" alt=""></figure>
+						</li>
+						<li class="slide-item">
+							<figure class="image-box"><img src="images/clients/sukhsangam.png"
+									style="padding:50px;margin-top: -50px;" alt=""></figure>
+						</li>
+						<li class="slide-item">
+							<figure class="image-box"><img src="images/clients/ganga_bg.png"
+									style="padding:50px;margin-top: -50px;" alt=""></figure>
 						</li>
 					</ul>
 				</div>
