--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="LancingDev,lancingdev,LANCINGDEV,Freelancer,freelancing,freelancing developer,freelancing websites,freelancing sites,web development company,web development,app development,business,digital marketing,graphic design, webdevelopment,appdevelopment,it company,it company in vadodara,app dvelopment company in vadodara,web development company in vadodara,graphic designer in vadodara,digital marketing company in vadodara,digital marketing company in gujarat,digital marketing company in india,It consultancy,it consultancy in vadodara,it consultancy in gujarat,it consultancy in India
 	        ">
 	<link href="css/main.css" rel="stylesheet">
-	
+
 	<link href="css/responsive.css" rel="stylesheet">
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 	<link rel="icon" href="images/logo-final-black.png" type="image/x-icon">
@@ -91,41 +91,44 @@
 					<div class="text">We work with some really amazing businesses and organisations. Here are</div>
 				</div>
 				<div class="sponsors-outer">
-					<ul class="sponsors-carousel-two owl-carousel owl-theme">
+					<ul class="sponsors-carousel-two owl-carousel owl-theme"
+						style="cursor: -webkit-grab;cursor: grab;">
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/reon1.png"
-										alt=""></a>
+							<figure class="image-box"><img src="images/clients/reon1.png" alt="">
 							</figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img
-										src="images/clients/swasarjan.jpeg" alt="" style="    padding: 50px;
-                             margin-top: -60px;"></a></figure>
-						</li>
-						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img
-										src="images/clients/gift time.png" alt="" style="margin-top: -10px;"></a>
+							<figure class="image-box"><img src="images/clients/Qualtiy.png" alt="">
 							</figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/h.png"
-										style="padding: 25px;margin-top: q0px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/swasarjan.jpeg" alt="" style="    padding: 50px;
+                             margin-top: -60px;"></figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/sahara.png"
-										style="margin-top: 20px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/gift time.png" alt=""
+									style="margin-top: -10px;">
+							</figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/mehul1.png"
-										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/h.png"
+									style="padding: 25px;margin-top: q0px;" alt=""></figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/sukhsangam.png"
-										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/sahara.png" style="margin-top: 20px;"
+									alt=""></figure>
 						</li>
 						<li class="slide-item">
-							<figure class="image-box"><a href="#" target="_blank"><img src="images/clients/ganga_bg.png"
-										style="padding:50px;margin-top: -50px;" alt=""></a></figure>
+							<figure class="image-box"><img src="images/clients/mehul1.png"
+									style="padding:50px;margin-top: -50px;" alt=""></figure>
+						</li>
+						<li class="slide-item">
+							<figure class="image-box"><img src="images/clients/sukhsangam.png"
+									style="padding:50px;margin-top: -50px;" alt=""></figure>
+						</li>
+						<li class="slide-item">
+							<figure class="image-box"><img src="images/clients/ganga_bg.png"
+									style="padding:50px;margin-top: -50px;" alt=""></figure>
 						</li>
 					</ul>
 				</div>
@@ -170,6 +173,25 @@
 						<div class="gallery-block mix all website col-lg-3 col-md-4 col-sm-12">
 							<div class="inner-box">
 								<figure class="image-box">
+									<img src="images/clients/quality_sand.png" alt="">
+									<div class="overlay-box">
+										<div class="overlay-inner">
+											<div class="content">
+												<h6><a href="https://qualitysandprocessing.in" target="_blank">Quality
+														Sand Processing</a></h6>
+												<div class="category">Web Development</div>
+											</div>
+										</div>
+									</div>
+									<a href="images/clients/quality_sand.png" data-fancybox="gallery-1" data-caption=""
+										class="link"><span class="icon flaticon-full-screen"></span></a>
+								</figure>
+							</div>
+						</div>
+
+						<div class="gallery-block mix all website col-lg-3 col-md-4 col-sm-12">
+							<div class="inner-box">
+								<figure class="image-box">
 									<img src="images/gallery/swasarjan.jpg" alt="">
 									<div class="overlay-box">
 										<div class="overlay-inner">
@@ -204,16 +226,18 @@
 						<div class="gallery-block mix all website col-lg-3 col-md-4 col-sm-12">
 							<div class="inner-box">
 								<figure class="image-box">
-									<img src="images/clients/ganga_bg.png"  alt="">
+									<img src="images/clients/ganga_bg.png" alt="">
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="https://gangaminerals.in" target="_blank">Ganga Minerals</a></h6>
+												<h6><a href="https://gangaminerals.in" target="_blank">Ganga
+														Minerals</a></h6>
 												<div class="category">Web Development</div>
 											</div>
 										</div>
 									</div>
-									<a href="images/clients/gangamineral_comp.png" data-fancybox="gallery-1" data-caption="" class="link" target="_blank"><span
+									<a href="images/clients/gangamineral_comp.png" data-fancybox="gallery-1"
+										data-caption="" class="link" target="_blank"><span
 											class="icon flaticon-full-screen"></span></a>
 								</figure>
 							</div>
@@ -225,13 +249,14 @@
 									<div class="overlay-box">
 										<div class="overlay-inner">
 											<div class="content">
-												<h6><a href="#" >R&B Creation</a></h6>
+												<h6><a href="#">R&B Creation</a></h6>
 												<div class="category">Visiting Card</div>
 											</div>
 										</div>
 									</div>
-									<a href="images/clients/RNB creation vc.jpeg" data-fancybox="gallery-1" data-caption="" class="link"
-										target="_blank"><span class="icon flaticon-full-screen"></span></a>
+									<a href="images/clients/RNB creation vc.jpeg" data-fancybox="gallery-1"
+										data-caption="" class="link" target="_blank"><span
+											class="icon flaticon-full-screen"></span></a>
 								</figure>
 							</div>
 						</div>
