--- a/service.html
+++ b/service.html
@@ -92,7 +92,7 @@
 				<div class="sec-title text-center">
 					<h2>Better Agency Solution</h2>
 				</div>
-				<div class="agency-carousel owl-carousel owl-theme">
+				<div class="agency-carousel owl-carousel owl-theme" style="cursor: grab;">
 					<div class="slide">
 						<div class="row clearfix">
 							<div class="agency-block col-lg-4 col-md-6 col-sm-12">
@@ -180,41 +180,41 @@
 			<div class="auto-container">
 				<div class="inner-container margin-bottom">
 					<div class="sponsors-outer">
-						<ul class="sponsors-carousel owl-carousel owl-theme">
+						<ul class="sponsors-carousel owl-carousel owl-theme" style="cursor: grab;">
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/java.jpg" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/java.jpg" alt=""></a>
 								</figure>
 							</li>
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/Python.jpg" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/Python.jpg" alt=""></a>
 								</figure>
 							</li>
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/html.png" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/html.png" alt=""></a>
 								</figure>
 							</li>
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/css.png" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/css.png" alt=""></a>
 								</figure>
 							</li>
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/wordpress.png" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/wordpress.png" alt=""></a>
 								</figure>
 							</li>
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/php.png" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/php.png" alt=""></a>
 								</figure>
 							</li>
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/flutter.jpg" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/flutter.jpg" alt=""></a>
 								</figure>
 							</li>
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/Coreldraw.jpg" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/Coreldraw.jpg" alt=""></a>
 								</figure>
 							</li>
 							<li class="slide-item">
-								<figure class="image-box"><a href="#"><img src="images/tech/laravel.png" alt=""></a>
+								<figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/laravel.png" alt=""></a>
 								</figure>
 							</li>
 						</ul>
