--- a/index.html
+++ b/index.html
@@ -316,48 +316,52 @@
             <div class="auto-container">
                 <div class="inner-container margin-bottom">
                     <div class="sponsors-outer">
-                        <ul class="sponsors-carousel owl-carousel owl-theme">
+                        <ul class="sponsors-carousel owl-carousel owl-theme" style="cursor: grab;">
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/java.jpg" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/java.jpg"
+                                            alt=""></a>
                                 </figure>
                             </li>
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/Python.jpg" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/Python.jpg"
+                                            alt=""></a>
                                 </figure>
                             </li>
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/html.png" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/html.png"
+                                            alt=""></a>
                                 </figure>
                             </li>
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/css.png" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/css.png"
+                                            alt=""></a>
                                 </figure>
                             </li>
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/wordpress.png" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/wordpress.png"
+                                            alt=""></a>
                                 </figure>
                             </li>
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/php.png" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/php.png"
+                                            alt=""></a>
                                 </figure>
                             </li>
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/flutter.jpg" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/flutter.jpg"
+                                            alt=""></a>
                                 </figure>
                             </li>
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/Coreldraw.jpg" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/Coreldraw.jpg"
+                                            alt=""></a>
                                 </figure>
                             </li>
                             <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/laravel.png" alt=""></a>
+                                <figure class="image-box"><a href="#" style="cursor: grab;"><img src="images/tech/laravel.png"
+                                            alt=""></a>
                                 </figure>
                             </li>
-                            <li class="slide-item">
-                                <figure class="image-box"><a href="#"><img src="images/tech/bootstrap.png" alt=""></a>
-                                </figure>
-                            </li>
-
                         </ul>
                     </div>
                 </div>
