--- a/lancingdev.html
+++ b/lancingdev.html
@@ -28,7 +28,7 @@
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
             /* background: #ED213A;
   background: -webkit-linear-gradient(to right, #93291E, #ED213A);
-  background: linear-gradient(to right, #93291E, #ED213A); */
+  background: linear-gradient(to right, #9    3291E, #ED213A); */
             /* Created with https://www.css-gradient.com */
 
             color: #232323;
